# RPI_bmw-infotainment

./: .gitignore  .gitlab-ci.yml  __init__.py  index.html  install.sh  params.json  readme.md
EAGLE project/Libraries/: AVX-08053D106KAT2A.scr  Microchip-MCP2025-330E_P.lbr  Microchip-MCP2025-330E_P.scr  readme.md
EAGLE project/Projects/LIN interface/: LIN-interface.brd  LIN-interface.sch
EAGLE/Design rules/: readme.md
EAGLE/Libraries/: ML26-RECEPTACLE.scr  Microchip-MCP2021-330E_SN.scr  NXP-2N7002E.scr
OpenBM-gateway/: mongoose.h
OpenBM-gateway/nbproject/: Makefile-Debug.mk  configurations.xml
OpenBM-gateway/nbproject/private/: private.xml
XBMC plugin/OpenBM-client/: TCPClient_handler_old.py  orginal_code.py  socket_client_native.py
XBMC plugin/OpenBM-client-old/: readme.md  socket_client_async.py  socket_client_test.py  socket_server.py
XBMC plugin/OpenBM-client-old/lib/: TCPClientHandlerNative.py  __init__.py
XBMC plugin/OpenBM-client/lib/: TCPClientHandlerAsyncore.py  TCPClientHandlerNative.py
XBMC plugin/XBMC-client/: SignalDatabase.xml  events.xml  main.py
XBMC plugin/XBMC-client/lib/: IbusMsg.py  KodiControls.config  KodiControls.py  TCPClientHandler.py
XBMC plugin/XBMC-dll/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  project.xml
XBMC plugin/XBMC-dll/nbproject/private/: private.xml
XBMC plugin/plugin.module.bmw-infotainment/: main.cpp
XBMC plugin/plugin.module.bmw-infotainment/nbproject/: Package-Debug.bash  Package-Release.bash
XBMC plugin/plugin.module.bmw-infotainment/nbproject/private/: private.xml
XBMC plugin/plugin.module/nbproject/: Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
XBMC plugin/plugin.service.bmw-infotainment/: addon.xml  changelog.txt
XBMC plugin/plugin.service.bmw-infotainment/resources/data/signal-db/: SignalDatabase.xsl
XBMC plugin/plugin.service.bmw-infotainment/resources/lib/: BMButtons.py  IBUSHandler.py  log.py
XBMC plugin/plugin.service.bmw-infotainment/resources/lib/debug/: XBMCADDON.py
XBMC plugin/plugin.service.bmw-infotainment/resources/lib/signal-db/: SignalDatabase.xml
XBMC plugin/script.service.bmw-infotainment/: addon.xml  default-handler.py  readme.md  service.py  tcp-server.py
XBMC plugin/script.service.bmw-infotainment/resources/: settings.xml
XBMC plugin/script.service.bmw-infotainment/resources/lib/: BMButtons.py  IBUSHandler.py  TCPIPHandler.py  TCPIPSocket.py  TCPdaemon.py  TCPhandler.py  callback.py  debug.py  keymap.py  log.py  settings.py
XBMC plugin/script.service.bmw-infotainment/resources/lib/debug/: XBMC.py  XBMCADDON.py  XBMCGUI.py
XBMC plugin/script.service.bmw-infotainment/resources/lib/signal-db/: SignalDatabase.xml
deploy/: create-repository.py
gateway/: CMakeLists.txt  CPackConfig.cmake  build-arm-linux-gnueabihf.sh  build-armhf.sh  build-i386-linux-gnu.sh  build-i686-linux-gnu.sh  config.conf  deploy.py  ibus.sh  install.sh  openbm-gateway.conf  readme.md  system.event
gateway/cmake-debhelper/: readme.md
gateway/debian/: CMakeLists.txt  openbm-gateway.init.in
gateway/html/: CMakeLists.txt  index.html
gateway/html/static/: Thumbs.db
gateway/nbproject/: Package-Debug.bash  project.xml
gateway/nbproject/private/: configurations.xml
gateway/src/: CMakeLists.txt  mongoose.cpp
plugin/: deploy.py  publish.py
plugin/plugin.module/: main.cpp
plugin/plugin.module/nbproject/: Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  project.xml
plugin/plugin.service.bmw-infotainment/: LICENCE.txt  addon.xml  changelog.txt  default-handler.py  deploy.json  guicallback.py  make-package.json  make-package.py  readme.md  service.py
plugin/plugin.service.bmw-infotainment/guicallback/: CMakeLists.txt  build-arm-linux-gnueabihf.sh  build-armhf.sh  build-i386-linux-gnu.sh  build-i386.sh  build.sh  install.sh  readme.md
plugin/plugin.service.bmw-infotainment/guicallback/src/: CMakeLists.txt  main.cpp
plugin/plugin.service.bmw-infotainment/resources/: settings.xml
plugin/plugin.service.bmw-infotainment/resources/data/signal-db/: SignalDatabase.xml
plugin/plugin.service.bmw-infotainment/resources/lib/: BMButtons.py  BluetoothHandler.py  IBUSHandler.py  TCPIPHandler.py  TCPIPSocket.py  bmbt.py  bmw.py  buttons.py  callback.py  event_handler.py  events.py  gateway_protocol.py  gui_events.py  kodi.py  log.py  main_thread.py  settings.py  signal_events.py  signal_handler.py  signal_methods.py  signal_recorder.py  signaldb.py  statemachine.py  system.py  tcp_events.py  tcp_handler.py  tcp_socket.py  test_button.py  test_protocol.py  test_signaldb.py  winpdb.py
plugin/plugin.service.bmw-infotainment/resources/lib/debug/: XBMC.py  events.py  xbmc.py  xbmcaddon.py  xbmcgui.py
plugin/plugin.service.bmw-infotainment/resources/lib/kodi/: __init__.py  addon_settings.py  api.py  builtin.py  callbacks.py  gui.py
plugin/plugin.service.bmw-infotainment/resources/lib/kodi/debug/: events.py  xbmc.py  xbmcaddon.py  xbmcgui.py
plugin/plugin.service.bmw-infotainment/resources/skins/Default/720p/: build-xml.py  includes.xml  window-default.xml  window-info-source.xml
plugin/plugin.service.bmw-infotainment/tests/: gateway.py  test_service.py
plugin/script.module.bluetooth/: LICENCE.txt  addon.xml  main.py  readme.md
plugin/script.module.bluetooth/resources/: settings.xml
plugin/script.module.bluetooth/resources/lib/: bluetooth_core.py  gui.py  settings.py
plugin/script.module.bluetooth/resources/lib/debug/: xbmcgui.py
plugin/script.module.bluetooth/resources/skins/Default/720p/: bluetooth-home.xml  include.xml
